--- a/Angela Yu Full Web Development Course/API Application Programming Interfaces/Newsletter-Signup/package.json
+++ b/Angela Yu Full Web Development Course/API Application Programming Interfaces/Newsletter-Signup/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "weather",
+  "name": "newsletter-signup",
   "version": "1.0.0",
-  "description": "A Weather App",
+  "description": "NewsLetter Sign Up Page",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Conrad Kandoro (openWeatherMap)",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "request": "^2.88.2"
   }
 }
